fix: form spacing

--- a/src/components/homepage/homepage-form/homepageform.module.scss
+++ b/src/components/homepage/homepage-form/homepageform.module.scss
@@ -4,7 +4,7 @@
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2); 
     padding: 40px; 
     max-width: 80%;
-    margin: auto; 
+    margin: 20px auto; 
     border: 1px solid #4caf50;
 
     h2 {
